# atuda

./: .gitignore  README.md  db.json  db.txt
.github/workflows/: build.yaml  build_images.yaml
client/: client.py
client/open-webui/: Dockerfile  add.sh  addCode.js
client/pipeline/: Dockerfile
server/: .env.sample  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
server/notebooks/: Extraction, Summary and Storage Data.ipynb  User Query Process.ipynb
server/src/: config.py
server/src/models/: answer_schema.py  base_chunk.py  image_chunk.py  text_chunk.py
server/src/routes/: chat.py
server/src/services/: chain_multimodal.py  data_preparation.py  data_storage.py  extraction.py  main.py  retriever.py  summarization.py
server/src/utils/: config.py  const.py  data_preparing.py
